--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,9 @@
 
+3.2
+
+	CHG: new algorithm for generating new file name
+	ADD: double clicking on a movie opens file manager in containing folder
+	
 3.1
 
 	CHG: some corrections in guessing info from file name
