removed print code, removed fixed bugs, added new bugs, updated changelog

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@
 
 	CHG: small changes in title cleanup
 	CHG: better organization of movie information panel
+	FIX: corrections with some titles detection
 
 4
 
