--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,8 @@
 	FIX: corrections with some titles detection
 	ADD: the application now warns you with a sound, when information search finishes
 	ADD: "advertising" label during information search
+	ADD: files with same names are now properly handled, 
+		 appending a counter at file name's end
 
 4
 
